<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jagrosh</groupId>
    <artifactId>MusicBot</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    
    <repositories>
        <repository>
            <id>m2.duncte123.dev</id>
            <name>m2-duncte123</name>
            <url>https://m2.duncte123.dev/releases</url>
        </repository>
        <repository>
            <id>dv8tion</id>
            <name>m2-dv8tion</name>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
        <repository>
            <id>central</id>
            <name>bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>AddWhateverIdYouWant</id>
            <name>SameHere</name>
            <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <!-- Lavalink -->
        <repository>
            <id>arbjergDev</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>arbjergDevSnapshot</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/snapshots</url>
        </repository>
        <repository>
            <id>TopiWTF-releases</id>
            <name>Topis Maven Repo</name>
            <url>https://maven.topi.wtf/releases</url>
        </repository>
        <!-- Chew's Maven Repo for JDA-Chewtils -->
        <repository>
            <id>chew</id>
            <name>m2-chew</name>
            <url>https://m2.chew.pro/releases</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Discord Dependencies -->
        <dependency>
            <groupId>net.dv8tion</groupId> 
            <artifactId>JDA</artifactId> 
            <version>5.6.1</version>
        </dependency>
        <dependency>
            <groupId>pw.chew</groupId>
            <artifactId>jda-chewtils</artifactId>
            <version>2.1</version>
            <scope>compile</scope>
            <type>pom</type>
        </dependency>
        
        <!-- Music Dependencies -->
        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>2.2.4</version>
        </dependency>
        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>common</artifactId>
            <version>1.13.5</version>
        </dependency>
        <dependency>
            <groupId>com.dunctebot</groupId>
            <artifactId>sourcemanagers</artifactId>
            <version>1.9.0</version>
        </dependency>

        <!-- LavaSrc(LavaSearch, LavaLyrics, Spotify) -->
        <dependency>
            <groupId>com.github.topi314.lavasrc</groupId>
            <artifactId>lavasrc</artifactId>
            <version>4.8.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.topi314.lavasrc</groupId>
            <artifactId>protocol-jvm</artifactId>
            <version>4.8.1</version>
        </dependency>

        <!-- Misc Internal Dependencies -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.21.2</version>
        </dependency>
        
        <!-- Testing Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
    </dependencies>
    
    <build>
      <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>1.5</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <shadedArtifactAttached>true</shadedArtifactAttached>
                        <shadedClassifierName>All</shadedClassifierName>
                        <artifactSet>
                            <includes>
                                <include>*:*</include>
                            </includes>
                        </artifactSet>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                <resource>reference.conf</resource>
                            </transformer>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <manifestEntries>
                                    <Main-Class>com.jagrosh.jmusicbot.JMusicBot</Main-Class>
                                    <Specification-Title>${project.artifactId}</Specification-Title>
                                    <Specification-Version>${project.version}</Specification-Version>
                                    <Implementation-Title>${project.artifactId}</Implementation-Title>
                                    <Implementation-Version>${project.version}</Implementation-Version>
                                    <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                                </manifestEntries>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
      </plugins>
    </build>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
</project>